style changes movie list

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#41483C" />
     <meta
       name="description"
-      content="Video"
+      content="Millions of movies, TV shows and people to discover. Explore now."
     />
     <meta name="keywords" content="Movies, TV Shows, Streaming, Reviews, API, Actors, Actresses, Photos, User Ratings, Synopsis, Trailers, Teasers, Credits, Cast">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
